Minimal rehabbed original version