@@ -7,8 +7,16 @@
   <version>1.0-SNAPSHOT</version>
   <name>cake-manager Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <dependencies>
 
+	<properties>
+		<java.version>11</java.version>
+		<!-- maven.compiler.release>${java.version}</maven.compiler.release -->
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<jetty.jvmArgs>--add-opens java.base/java.lang=ALL-UNNAMED</jetty.jvmArgs>
+	</properties>
+
+  <dependencies>
       <!-- Servlet -->
       <dependency>
           <groupId>javax.servlet</groupId>
@@ -20,7 +28,7 @@
       <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-core</artifactId>
-          <version>2.8.0</version>
+          <version>2.16.1</version>
       </dependency>
 
       <!-- JPA -->
@@ -34,7 +42,7 @@
       <dependency>
           <groupId>org.hsqldb</groupId>
           <artifactId>hsqldb</artifactId>
-          <version>2.3.4</version>
+          <version>2.7.2</version>
       </dependency>
 
       <!-- Test dependencies. -->
@@ -52,16 +60,13 @@
 
         <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>2.3.2</version>
-            <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-            </configuration>
+            <version>3.12.1</version>
         </plugin>
 
         <plugin>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
+            <version>10.0.20</version>
             <configuration>
                 <scanIntervalSeconds>10</scanIntervalSeconds>
                 <stopKey>STOP</stopKey>
